distinguish between publication and update date
Co-authored-by: Eitot <Eitot@users.noreply.github.com>

--- a/Vienna/Resources/Localizable.xcstrings
+++ b/Vienna/Resources/Localizable.xcstrings
@@ -6498,6 +6498,7 @@
     },
     "Date" : {
       "comment" : "Data field name visible in menu/article list/smart folder definition",
+      "extractionState" : "stale",
       "localizations" : {
         "cs" : {
           "stringUnit" : {
@@ -6620,6 +6621,9 @@
           }
         }
       }
+    },
+    "Date Published" : {
+      "comment" : "Data field name visible in menu/article list/smart folder definition"
     },
     "Delete" : {
       "comment" : "Title of a button on an alert\n   Title of a menu item",
@@ -12851,6 +12855,9 @@
           }
         }
       }
+    },
+    "Last Update" : {
+      "comment" : "Data field name visible in menu/article list/smart folder definition"
     },
     "Link" : {
       "comment" : "Data field name visible in menu/article list",
