--- a/Vienna/Resources/fr.lproj/Predicates.strings
+++ b/Vienna/Resources/fr.lproj/Predicates.strings
@@ -1,9 +1,49 @@
-"%[All,Any]@ of the following are true" = "L'article satisfait %1$[toutes les,une des]@ conditions suivantes";
-"%[Author,Folder,Subject,Text]@ %[is,is not]@ %@" = "%1$[Auteur,Dossier,Sujet,Texte]@ %2$[est,n'est pas]@ %3$@";
-"%[Author,Subject,Text]@ %[contains,does not contain]@ %@" = "%1$[Auteur,Sujet,Texte]@ %2$[contient,ne contient pas]@ %3$@";
-"%[Date]@ %[is,is greater than or equal to,is less than,is less than or equal to]@ %[yesterday]@" = "%1$[Date]@ %2$[est,est durant ou après,est avant,est avant ou durant]@ %3$[hier]@";
-"%[Date]@ %[is,is greater than,is greater than or equal to,is less than,is less than or equal to]@ %[last week]@" = "%1$[Date]@ %2$[est durant,est durant ou après,est dans ou après,est avant,est avant ou durant]@ %3$[la dernière semaine]@";
-"%[Date]@ %[is,is less than,is less than or equal to]@ %[today]@" = "%1$[Date]@ %2$[est,est avant,est avant ou durant]@ %3$[aujourd'hui]@";
-"%[Date]@ %[less than ago,more than ago]@ %[days,hours,minutes,months,weeks,years]@ %@" = "%1$[Date]@ %2$[est dans les,n'est pas dans les]@ %4$@ %3$[derniers jours,dernières heures,dernières minutes,derniers mois,dernières semaines,dernières années]@";
-"%[Deleted,Flagged,HasEnclosure,Read]@ is %[No,Yes]@" = "%1$[Effacé,Signalé,Fichier joint,Lu]@ %2$[Non,Oui]@";
+"%[All]@ of the following are true" = "L'article satisfait %1$[toutes les]@ conditions suivantes";
+"%[Any]@ of the following are true" = "L'article satisfait %1$[une des]@ conditions suivantes";
 "%[None]@ of the following are true" = "L'article satisfait %1$[aucune]@ des conditions suivantes";
+"%[Date]@ %[is]@ %[last week]@" = "%1$[Date]@ %2$[est durant]@ %3$[la dernière semaine]@";
+"%[Date]@ %[is]@ %[today]@" = "%1$[Date]@ %2$[est]@ %3$[aujourd'hui]@";
+"%[Date]@ %[is]@ %[yesterday]@" = "%1$[Date]@ %2$[est]@ %3$[hier]@";
+"%[Date]@ %[is greater than]@ %[last week]@" = "%1$[Date]@ %2$[est durant ou après]@ %3$[la dernière semaine]@";
+"%[Date]@ %[is greater than or equal to]@ %[last week]@" = "%1$[Date]@ %2$[est dans ou après]@ %3$[la dernière semaine]@";
+"%[Date]@ %[is greater than or equal to]@ %[yesterday]@" = "%1$[Date]@ %2$[est durant ou après]@ %3$[hier]@";
+"%[Date]@ %[is less than]@ %[last week]@" = "%1$[Date]@ %2$[est avant]@ %3$[la dernière semaine]@";
+"%[Date]@ %[is less than]@ %[today]@" = "%1$[Date]@ %2$[est avant]@ %3$[aujourd'hui]@";
+"%[Date]@ %[is less than]@ %[yesterday]@" = "%1$[Date]@ %2$[est avant]@ %3$[hier]@";
+"%[Date]@ %[is less than or equal to]@ %[last week]@" = "%1$[Date]@ %2$[est avant ou durant]@ %3$[la dernière semaine]@";
+"%[Date]@ %[is less than or equal to]@ %[today]@" = "%1$[Date]@ %2$[est avant ou durant]@ %3$[aujourd'hui]@";
+"%[Date]@ %[is less than or equal to]@ %[yesterday]@" = "%1$[Date]@ %2$[est avant ou durant]@ %3$[hier]@";
+"%[Date]@ %[less than ago]@ %[days]@ %@" = "%1$[Date]@ %2$[est dans les]@ %4$@ %3$[derniers jours]@";
+"%[Date]@ %[less than ago]@ %[hours]@ %@" = "%1$[Date]@ %2$[est dans les]@ %4$@ %3$[dernières heures]@";
+"%[Date]@ %[less than ago]@ %[minutes]@ %@" = "%1$[Date]@ %2$[est dans les]@ %4$@ %3$[dernières minutes]@";
+"%[Date]@ %[less than ago]@ %[months]@ %@" = "%1$[Date]@ %2$[est dans les]@ %4$@ %3$[derniers mois]@";
+"%[Date]@ %[less than ago]@ %[weeks]@ %@" = "%1$[Date]@ %2$[est dans les]@ %4$@ %3$[dernières semaines]@";
+"%[Date]@ %[less than ago]@ %[years]@ %@" = "%1$[Date]@ %2$[est dans les]@ %4$@ %3$[dernières années]@";
+"%[Date]@ %[more than ago]@ %[days]@ %@" = "%1$[Date]@ %2$[n'est pas dans les]@ %4$@ %3$[derniers jours]@";
+"%[Date]@ %[more than ago]@ %[hours]@ %@" = "%1$[Date]@ %2$[n'est pas dans les]@ %4$@ %3$[dernières heures]@";
+"%[Date]@ %[more than ago]@ %[minutes]@ %@" = "%1$[Date]@ %2$[n'est pas dans les]@ %4$@ %3$[dernières minutes]@";
+"%[Date]@ %[more than ago]@ %[months]@ %@" = "%1$[Date]@ %2$[n'est pas dans les]@ %4$@ %3$[derniers mois]@";
+"%[Date]@ %[more than ago]@ %[weeks]@ %@" = "%1$[Date]@ %2$[n'est pas dans les]@ %4$@ %3$[dernières semaines]@";
+"%[Date]@ %[more than ago]@ %[years]@ %@" = "%1$[Date]@ %2$[n'est pas dans les]@ %4$@ %3$[dernières années]@";
+"%[Author]@ %[contains]@ %@" = "%1$[Auteur]@ %2$[contient]@ %3$@";
+"%[Author]@ %[does not contain]@ %@" = "%1$[Auteur]@ %2$[ne contient pas]@ %3$@";
+"%[Author]@ %[is]@ %@" = "%1$[Auteur]@ %2$[est]@ %3$@";
+"%[Author]@ %[is not]@ %@" = "%1$[Auteur]@ %2$[n'est pas]@ %3$@";
+"%[Deleted]@ is %[No]@" = "%1$[Effacé]@ %2$[Non]@";
+"%[Deleted]@ is %[Yes]@" = "%1$[Effacé]@ %2$[Oui]@";
+"%[Flagged]@ is %[No]@" = "%1$[Signalé]@ %2$[Non]@";
+"%[Flagged]@ is %[Yes]@" = "%1$[Signalé]@ %2$[Oui]@";
+"%[Folder]@ %[is]@ %@" = "%1$[Dossier]@ %2$[est]@ %3$@";
+"%[Folder]@ %[is not]@ %@" = "%1$[Dossier]@ %2$[n'est pas]@ %3$@";
+"%[HasEnclosure]@ is %[No]@" = "%1$[Fichier joint]@ %2$[Non]@";
+"%[HasEnclosure]@ is %[Yes]@" = "%1$[Fichier joint]@ %2$[Oui]@";
+"%[Read]@ is %[No]@" = "%1$[Lu]@ %2$[Non]@";
+"%[Read]@ is %[Yes]@" = "%1$[Lu]@ %2$[Oui]@";
+"%[Subject]@ %[contains]@ %@" = "%1$[Sujet]@ %2$[contient]@ %3$@";
+"%[Subject]@ %[does not contain]@ %@" = "%1$[Sujet]@ %2$[ne contient pas]@ %3$@";
+"%[Subject]@ %[is]@ %@" = "%1$[Sujet]@ %2$[est]@ %3$@";
+"%[Subject]@ %[is not]@ %@" = "%1$[Sujet]@ %2$[n'est pas]@ %3$@";
+"%[Text]@ %[contains]@ %@" = "%1$[Texte]@ %2$[contient]@ %3$@";
+"%[Text]@ %[does not contain]@ %@" = "%1$[Texte]@ %2$[ne contient pas]@ %3$@";
+"%[Text]@ %[is]@ %@" = "%1$[Texte]@ %2$[est]@ %3$@";
+"%[Text]@ %[is not]@ %@" = "%1$[Texte]@ %2$[n'est pas]@ %3$@";
