--- a/Vienna/Resources/nl.lproj/Predicates.strings
+++ b/Vienna/Resources/nl.lproj/Predicates.strings
@@ -1,8 +1,49 @@
-"%[All,Any,None]@ of the following are true" = "Artikel voldoet aan %1$[alle,een of meer,geen]@ van de volgende voorwaarden";
-"%[Author,Folder,Subject,Text]@ %[is,is not]@ %@" = "%1$[Auteur,Feed of map,Onderwerp,Inhoud]@ %2$[is,is niet]@ %3$@";
-"%[Author,Subject,Text]@ %[contains,does not contain]@ %@" = "%1$[Auteur,Onderwerp,Inhoud]@ %2$[bevat,bevat niet]@ %3$@";
-"%[Date]@ %[is,is greater than or equal to,is less than,is less than or equal to]@ %[yesterday]@" = "%1$[Datum]@ %2$[is,is na of is,is voor,is voor of is]@ %3$[gisteren]@";
-"%[Date]@ %[is,is greater than,is greater than or equal to,is less than,is less than or equal to]@ %[last week]@" = "%1$[Datum]@ %2$[is,is na,is na of is,is voor,is voor of is]@ %3$[vorige week]@";
-"%[Date]@ %[is,is less than,is less than or equal to]@ %[today]@" = "%1$[Datum]@ %2$[is,is voor,is voor of is]@ %3$[vandaag]@";
-"%[Date]@ %[less than ago,more than ago]@ %[days,hours,minutes,months,weeks,years]@ %@" = "%1$[Datum]@ %2$[is in de afgelopen,is niet in de afgelopen]@ %4$@ %3$[dagen,uur,minuten,maanden,weken,jaar]@";
-"%[Deleted,Flagged,HasEnclosure,Read]@ is %[No,Yes]@" = "%1$[Is verwijderd,Is gemarkeerd,Bevat bijlage,Is gelezen]@ %2$[Nee,Ja]@";
+"%[All]@ of the following are true" = "Artikel voldoet aan %1$[alle]@ van de volgende voorwaarden";
+"%[Any]@ of the following are true" = "Artikel voldoet aan %1$[een of meer]@ van de volgende voorwaarden";
+"%[None]@ of the following are true" = "Artikel voldoet aan %1$[geen]@ van de volgende voorwaarden";
+"%[Date]@ %[is]@ %[last week]@" = "%1$[Datum]@ %2$[is]@ %3$[vorige week]@";
+"%[Date]@ %[is]@ %[today]@" = "%1$[Datum]@ %2$[is]@ %3$[vandaag]@";
+"%[Date]@ %[is]@ %[yesterday]@" = "%1$[Datum]@ %2$[is]@ %3$[gisteren]@";
+"%[Date]@ %[is greater than]@ %[last week]@" = "%1$[Datum]@ %2$[is na]@ %3$[vorige week]@";
+"%[Date]@ %[is greater than or equal to]@ %[last week]@" = "%1$[Datum]@ %2$[is na of is]@ %3$[vorige week]@";
+"%[Date]@ %[is greater than or equal to]@ %[yesterday]@" = "%1$[Datum]@ %2$[is na of is]@ %3$[gisteren]@";
+"%[Date]@ %[is less than]@ %[last week]@" = "%1$[Datum]@ %2$[is voor]@ %3$[vorige week]@";
+"%[Date]@ %[is less than]@ %[today]@" = "%1$[Datum]@ %2$[is voor]@ %3$[vandaag]@";
+"%[Date]@ %[is less than]@ %[yesterday]@" = "%1$[Datum]@ %2$[is voor]@ %3$[gisteren]@";
+"%[Date]@ %[is less than or equal to]@ %[last week]@" = "%1$[Datum]@ %2$[is voor of is]@ %3$[vorige week]@";
+"%[Date]@ %[is less than or equal to]@ %[today]@" = "%1$[Datum]@ %2$[is voor of is]@ %3$[vandaag]@";
+"%[Date]@ %[is less than or equal to]@ %[yesterday]@" = "%1$[Datum]@ %2$[is voor of is]@ %3$[gisteren]@";
+"%[Date]@ %[less than ago]@ %[days]@ %@" = "%1$[Datum]@ %2$[is in de afgelopen]@ %4$@ %3$[dagen]@";
+"%[Date]@ %[less than ago]@ %[hours]@ %@" = "%1$[Datum]@ %2$[is in de afgelopen]@ %4$@ %3$[uur]@";
+"%[Date]@ %[less than ago]@ %[minutes]@ %@" = "%1$[Datum]@ %2$[is in de afgelopen]@ %4$@ %3$[minuten]@";
+"%[Date]@ %[less than ago]@ %[months]@ %@" = "%1$[Datum]@ %2$[is in de afgelopen]@ %4$@ %3$[maanden]@";
+"%[Date]@ %[less than ago]@ %[weeks]@ %@" = "%1$[Datum]@ %2$[is in de afgelopen]@ %4$@ %3$[weken]@";
+"%[Date]@ %[less than ago]@ %[years]@ %@" = "%1$[Datum]@ %2$[is in de afgelopen]@ %4$@ %3$[jaar]@";
+"%[Date]@ %[more than ago]@ %[days]@ %@" = "%1$[Datum]@ %2$[is niet in de afgelopen]@ %4$@ %3$[dagen]@";
+"%[Date]@ %[more than ago]@ %[hours]@ %@" = "%1$[Datum]@ %2$[is niet in de afgelopen]@ %4$@ %3$[uur]@";
+"%[Date]@ %[more than ago]@ %[minutes]@ %@" = "%1$[Datum]@ %2$[is niet in de afgelopen]@ %4$@ %3$[minuten]@";
+"%[Date]@ %[more than ago]@ %[months]@ %@" = "%1$[Datum]@ %2$[is niet in de afgelopen]@ %4$@ %3$[maanden]@";
+"%[Date]@ %[more than ago]@ %[weeks]@ %@" = "%1$[Datum]@ %2$[is niet in de afgelopen]@ %4$@ %3$[weken]@";
+"%[Date]@ %[more than ago]@ %[years]@ %@" = "%1$[Datum]@ %2$[is niet in de afgelopen]@ %4$@ %3$[jaar]@";
+"%[Author]@ %[contains]@ %@" = "%1$[Auteur]@ %2$[bevat]@ %3$@";
+"%[Author]@ %[does not contain]@ %@" = "%1$[Auteur]@ %2$[bevat niet]@ %3$@";
+"%[Author]@ %[is]@ %@" = "%1$[Auteur]@ %2$[is]@ %3$@";
+"%[Author]@ %[is not]@ %@" = "%1$[Auteur]@ %2$[is niet]@ %3$@";
+"%[Deleted]@ is %[No]@" = "%1$[Is verwijderd]@ %2$[Nee]@";
+"%[Deleted]@ is %[Yes]@" = "%1$[Is verwijderd]@ %2$[Ja]@";
+"%[Flagged]@ is %[No]@" = "%1$[Is gemarkeerd]@ %2$[Nee]@";
+"%[Flagged]@ is %[Yes]@" = "%1$[Is gemarkeerd]@ %2$[Ja]@";
+"%[Folder]@ %[is]@ %@" = "%1$[Feed of map]@ %2$[is]@ %3$@";
+"%[Folder]@ %[is not]@ %@" = "%1$[Feed of map]@ %2$[is niet]@ %3$@";
+"%[HasEnclosure]@ is %[No]@" = "%1$[Bevat bijlage]@ %2$[Nee]@";
+"%[HasEnclosure]@ is %[Yes]@" = "%1$[Bevat bijlage]@ %2$[Ja]@";
+"%[Read]@ is %[No]@" = "%1$[Is gelezen]@ %2$[Nee]@";
+"%[Read]@ is %[Yes]@" = "%1$[Is gelezen]@ %2$[Ja]@";
+"%[Subject]@ %[contains]@ %@" = "%1$[Onderwerp]@ %2$[bevat]@ %3$@";
+"%[Subject]@ %[does not contain]@ %@" = "%1$[Onderwerp]@ %2$[bevat niet]@ %3$@";
+"%[Subject]@ %[is]@ %@" = "%1$[Onderwerp]@ %2$[is]@ %3$@";
+"%[Subject]@ %[is not]@ %@" = "%1$[Onderwerp]@ %2$[is niet]@ %3$@";
+"%[Text]@ %[contains]@ %@" = "%1$[Inhoud]@ %2$[bevat]@ %3$@";
+"%[Text]@ %[does not contain]@ %@" = "%1$[Inhoud]@ %2$[bevat niet]@ %3$@";
+"%[Text]@ %[is]@ %@" = "%1$[Inhoud]@ %2$[is]@ %3$@";
+"%[Text]@ %[is not]@ %@" = "%1$[Inhoud]@ %2$[is niet]@ %3$@";
