Import translations from Crowdin

--- a/Vienna Help/Resources/InfoPlist.xcstrings
+++ b/Vienna Help/Resources/InfoPlist.xcstrings
@@ -16,6 +16,12 @@
             "state" : "translated",
             "value" : "Aide Vienna"
           }
+        },
+        "sv" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Vienna hjälp"
+          }
         }
       }
     }
