--- a/Vienna/Interfaces/mul.lproj/Preferences.xcstrings
+++ b/Vienna/Interfaces/mul.lproj/Preferences.xcstrings
@@ -1787,6 +1787,12 @@
             "value" : "Médio"
           }
         },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Среднее"
+          }
+        },
         "sv" : {
           "stringUnit" : {
             "state" : "translated",
@@ -3135,6 +3141,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Pequeno"
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Меньшее"
           }
         },
         "sv" : {
@@ -6543,6 +6555,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Grande"
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Больше"
           }
         },
         "sv" : {
