Run xcodebuild to validate string catalogs and combine Predicate.strings

--- a/Vienna/Resources/de.lproj/Predicates.strings
+++ b/Vienna/Resources/de.lproj/Predicates.strings
@@ -1,49 +1,8 @@
-"%[All]@ of the following are true" = "Artikel erfüllt %1$[alle]@ der folgenden Bedingungen";
-"%[Any]@ of the following are true" = "Artikel erfüllt %1$[beliebige]@ der folgenden Bedingungen";
-"%[None]@ of the following are true" = "Artikel erfüllt %1$[keine]@ der folgenden Bedingungen";
-"%[Date]@ %[is]@ %[last week]@" = "%1$[Datum]@ %2$[ist]@ %3$[letzte Woche]@";
-"%[Date]@ %[is]@ %[today]@" = "%1$[Datum]@ %2$[ist]@ %3$[heute]@";
-"%[Date]@ %[is]@ %[yesterday]@" = "%1$[Datum]@ %2$[ist]@ %3$[gestern]@";
-"%[Date]@ %[is greater than]@ %[last week]@" = "%1$[Datum]@ %2$[ist nach]@ %3$[letzte Woche]@";
-"%[Date]@ %[is greater than or equal to]@ %[last week]@" = "%1$[Datum]@ %2$[ist nach oder ist]@ %3$[letzte Woche]@";
-"%[Date]@ %[is greater than or equal to]@ %[yesterday]@" = "%1$[Datum]@ %2$[ist nach oder ist]@ %3$[gestern]@";
-"%[Date]@ %[is less than]@ %[last week]@" = "%1$[Datum]@ %2$[ist vor]@ %3$[letzte Woche]@";
-"%[Date]@ %[is less than]@ %[today]@" = "%1$[Datum]@ %2$[ist vor]@ %3$[heute]@";
-"%[Date]@ %[is less than]@ %[yesterday]@" = "%1$[Datum]@ %2$[ist vor]@ %3$[gestern]@";
-"%[Date]@ %[is less than or equal to]@ %[last week]@" = "%1$[Datum]@ %2$[ist vor oder ist]@ %3$[letzte Woche]@";
-"%[Date]@ %[is less than or equal to]@ %[today]@" = "%1$[Datum]@ %2$[ist vor oder ist]@ %3$[heute]@";
-"%[Date]@ %[is less than or equal to]@ %[yesterday]@" = "%1$[Datum]@ %2$[ist vor oder ist]@ %3$[gestern]@";
-"%[Date]@ %[less than ago]@ %[days]@ %@" = "%1$[Datum]@ %2$[ist innerhalb der letzten]@ %4$@ %3$[Tage]@";
-"%[Date]@ %[less than ago]@ %[hours]@ %@" = "%1$[Datum]@ %2$[ist innerhalb der letzten]@ %4$@ %3$[Stunden]@";
-"%[Date]@ %[less than ago]@ %[minutes]@ %@" = "%1$[Datum]@ %2$[ist innerhalb der letzten]@ %4$@ %3$[Minuten]@";
-"%[Date]@ %[less than ago]@ %[months]@ %@" = "%1$[Datum]@ %2$[ist innerhalb der letzten]@ %4$@ %3$[Monate]@";
-"%[Date]@ %[less than ago]@ %[weeks]@ %@" = "%1$[Datum]@ %2$[ist innerhalb der letzten]@ %4$@ %3$[Wochen]@";
-"%[Date]@ %[less than ago]@ %[years]@ %@" = "%1$[Datum]@ %2$[ist innerhalb der letzten]@ %4$@ %3$[Jahre]@";
-"%[Date]@ %[more than ago]@ %[days]@ %@" = "%1$[Datum]@ %2$[ist nicht innerhalb der letzten]@ %4$@ %3$[Tage]@";
-"%[Date]@ %[more than ago]@ %[hours]@ %@" = "%1$[Datum]@ %2$[ist nicht innerhalb der letzten]@ %4$@ %3$[Stunden]@";
-"%[Date]@ %[more than ago]@ %[minutes]@ %@" = "%1$[Datum]@ %2$[ist nicht innerhalb der letzten]@ %4$@ %3$[Minuten]@";
-"%[Date]@ %[more than ago]@ %[months]@ %@" = "%1$[Datum]@ %2$[ist nicht innerhalb der letzten]@ %4$@ %3$[Monate]@";
-"%[Date]@ %[more than ago]@ %[weeks]@ %@" = "%1$[Datum]@ %2$[ist nicht innerhalb der letzten]@ %4$@ %3$[Wochen]@";
-"%[Date]@ %[more than ago]@ %[years]@ %@" = "%1$[Datum]@ %2$[ist nicht innerhalb der letzten]@ %4$@ %3$[Jahre]@";
-"%[Author]@ %[contains]@ %@" = "%1$[Autor]@ %2$[enthält]@ %3$@";
-"%[Author]@ %[does not contain]@ %@" = "%1$[Autor]@ %2$[enthält nicht]@ %3$@";
-"%[Author]@ %[is]@ %@" = "%1$[Autor]@ %2$[ist]@ %3$@";
-"%[Author]@ %[is not]@ %@" = "%1$[Autor]@ %2$[ist nicht]@ %3$@";
-"%[Deleted]@ is %[No]@" = "%1$[Ist gelöscht]@ %2$[Nein]@";
-"%[Deleted]@ is %[Yes]@" = "%1$[Ist gelöscht]@ %2$[Ja]@";
-"%[Flagged]@ is %[No]@" = "%1$[Ist markiert]@ %2$[Nein]@";
-"%[Flagged]@ is %[Yes]@" = "%1$[Ist markiert]@ %2$[Ja]@";
-"%[Folder]@ %[is]@ %@" = "%1$[Feed oder Ordner]@ %2$[ist]@ %3$@";
-"%[Folder]@ %[is not]@ %@" = "%1$[Feed oder Ordner]@ %2$[ist nicht]@ %3$@";
-"%[HasEnclosure]@ is %[No]@" = "%1$[Hat Anhang]@ %2$[Nein]@";
-"%[HasEnclosure]@ is %[Yes]@" = "%1$[Hat Anhang]@ %2$[Ja]@";
-"%[Read]@ is %[No]@" = "%1$[Ist gelesen]@ %2$[Nein]@";
-"%[Read]@ is %[Yes]@" = "%1$[Ist gelesen]@ %2$[Ja]@";
-"%[Subject]@ %[contains]@ %@" = "%1$[Betreff]@ %2$[enthält]@ %3$@";
-"%[Subject]@ %[does not contain]@ %@" = "%1$[Betreff]@ %2$[enthält nicht]@ %3$@";
-"%[Subject]@ %[is]@ %@" = "%1$[Betreff]@ %2$[ist]@ %3$@";
-"%[Subject]@ %[is not]@ %@" = "%1$[Betreff]@ %2$[ist nicht]@ %3$@";
-"%[Text]@ %[contains]@ %@" = "%1$[Inhalt]@ %2$[enthält]@ %3$@";
-"%[Text]@ %[does not contain]@ %@" = "%1$[Inhalt]@ %2$[enthält nicht]@ %3$@";
-"%[Text]@ %[is]@ %@" = "%1$[Inhalt]@ %2$[ist]@ %3$@";
-"%[Text]@ %[is not]@ %@" = "%1$[Inhalt]@ %2$[ist nicht]@ %3$@";
+"%[All,Any,None]@ of the following are true" = "Artikel erfüllt %1$[alle,beliebige,keine]@ der folgenden Bedingungen";
+"%[Author,Folder,Subject,Text]@ %[is,is not]@ %@" = "%1$[Autor,Feed oder Ordner,Betreff,Inhalt]@ %2$[ist,ist nicht]@ %3$@";
+"%[Author,Subject,Text]@ %[contains,does not contain]@ %@" = "%1$[Autor,Betreff,Inhalt]@ %2$[enthält,enthält nicht]@ %3$@";
+"%[Date]@ %[is,is greater than or equal to,is less than,is less than or equal to]@ %[yesterday]@" = "%1$[Datum]@ %2$[ist,ist nach oder ist,ist vor,ist vor oder ist]@ %3$[gestern]@";
+"%[Date]@ %[is,is greater than,is greater than or equal to,is less than,is less than or equal to]@ %[last week]@" = "%1$[Datum]@ %2$[ist,ist nach,ist nach oder ist,ist vor,ist vor oder ist]@ %3$[letzte Woche]@";
+"%[Date]@ %[is,is less than,is less than or equal to]@ %[today]@" = "%1$[Datum]@ %2$[ist,ist vor,ist vor oder ist]@ %3$[heute]@";
+"%[Date]@ %[less than ago,more than ago]@ %[days,hours,minutes,months,weeks,years]@ %@" = "%1$[Datum]@ %2$[ist innerhalb der letzten,ist nicht innerhalb der letzten]@ %4$@ %3$[Tage,Stunden,Minuten,Monate,Wochen,Jahre]@";
+"%[Deleted,Flagged,HasEnclosure,Read]@ is %[No,Yes]@" = "%1$[Ist gelöscht,Ist markiert,Hat Anhang,Ist gelesen]@ %2$[Nein,Ja]@";
