--- a/Vienna/Resources/sv.lproj/Predicates.strings
+++ b/Vienna/Resources/sv.lproj/Predicates.strings
@@ -1,49 +1,9 @@
 "%[All]@ of the following are true" = "Artikel matchar %1$[alla]@ följande villkor";
-"%[Any]@ of the following are true" = "Artikeln matchar %1$[någon]@ av följande villkor";
-"%[None]@ of the following are true" = "Artikeln matchar %1$[ingen]@ av följande villkor";
-"%[Date]@ %[is]@ %[last week]@" = "%1$[Datum]@ %2$[är]@ %3$[förra veckan]@";
-"%[Date]@ %[is]@ %[today]@" = "%1$[Datum]@ %2$[är]@ %3$[idag]@";
-"%[Date]@ %[is]@ %[yesterday]@" = "%1$[Datum]@ %2$[är]@ %3$[igår]@";
-"%[Date]@ %[is greater than]@ %[last week]@" = "%1$[Datum]@ %2$[är efter]@ %3$[förra veckan]@";
-"%[Date]@ %[is greater than or equal to]@ %[last week]@" = "%1$[Datum]@ %2$[är efter eller]@ %3$[förra veckan]@";
-"%[Date]@ %[is greater than or equal to]@ %[yesterday]@" = "%1$[Datum]@ %2$[är efter eller]@ %3$[igår]@";
-"%[Date]@ %[is less than]@ %[last week]@" = "%1$[Datum]@ %2$[är före]@ %3$[förra veckan]@";
-"%[Date]@ %[is less than]@ %[today]@" = "%1$[Datum]@ %2$[är före]@ %3$[idag]@";
-"%[Date]@ %[is less than]@ %[yesterday]@" = "%1$[Datum]@ %2$[är före]@ %3$[igår]@";
-"%[Date]@ %[is less than or equal to]@ %[last week]@" = "%1$[Datum]@ %2$[är före eller]@ %3$[förra veckan]@";
-"%[Date]@ %[is less than or equal to]@ %[today]@" = "%1$[Datum]@ %2$[är före eller]@ %3$[idag]@";
-"%[Date]@ %[is less than or equal to]@ %[yesterday]@" = "%1$[Datum]@ %2$[är före eller]@ %3$[igår]@";
-"%[Date]@ %[less than ago]@ %[days]@ %@" = "%1$[Datum]@ %2$[är de senaste]@ %4$@ %3$[dagarna]@";
-"%[Date]@ %[less than ago]@ %[hours]@ %@" = "%1$[Datum]@ %2$[är de senaste]@ %4$@ %3$[timmarna]@";
-"%[Date]@ %[less than ago]@ %[minutes]@ %@" = "%1$[Datum]@ %2$[är de senaste]@ %4$@ %3$[minuterna]@";
-"%[Date]@ %[less than ago]@ %[months]@ %@" = "%1$[Datum]@ %2$[är de senaste]@ %4$@ %3$[månaderna]@";
-"%[Date]@ %[less than ago]@ %[weeks]@ %@" = "%1$[Datum]@ %2$[är de senaste]@ %4$@ %3$[veckorna]@";
-"%[Date]@ %[less than ago]@ %[years]@ %@" = "%1$[Datum]@ %2$[är de senaste]@ %4$@ %3$[åren]@";
-"%[Date]@ %[more than ago]@ %[days]@ %@" = "%1$[Datum]@ %2$[är inte de senaste]@ %4$@ %3$[dagarna]@";
-"%[Date]@ %[more than ago]@ %[hours]@ %@" = "%1$[Datum]@ %2$[är inte de senaste]@ %4$@ %3$[timmarna]@";
-"%[Date]@ %[more than ago]@ %[minutes]@ %@" = "%1$[Datum]@ %2$[är inte de senaste]@ %4$@ %3$[minuterna]@";
-"%[Date]@ %[more than ago]@ %[months]@ %@" = "%1$[Datum]@ %2$[är inte de senaste]@ %4$@ %3$[månaderna]@";
-"%[Date]@ %[more than ago]@ %[weeks]@ %@" = "%1$[Datum]@ %2$[är inte de senaste]@ %4$@ %3$[veckorna]@";
-"%[Date]@ %[more than ago]@ %[years]@ %@" = "%1$[Datum]@ %2$[är inte de senaste]@ %4$@ %3$[åren]@";
-"%[Author]@ %[contains]@ %@" = "%1$[Författare]@ %2$[innehåller]@ %3$@";
-"%[Author]@ %[does not contain]@ %@" = "%1$[Författare]@ %2$[innehåller inte]@ %3$@";
-"%[Author]@ %[is]@ %@" = "%1$[Författare]@ %2$[är]@ %3$@";
-"%[Author]@ %[is not]@ %@" = "%1$[Författare]@ %2$[är inte]@ %3$@";
-"%[Deleted]@ is %[No]@" = "%1$[Är raderad]@ %2$[Nej]@";
-"%[Deleted]@ is %[Yes]@" = "%1$[Är raderad]@ %2$[Ja]@";
-"%[Flagged]@ is %[No]@" = "%1$[Är flaggad]@ %2$[Nej]@";
-"%[Flagged]@ is %[Yes]@" = "%1$[Är flaggad]@ %2$[Ja]@";
-"%[Folder]@ %[is]@ %@" = "%1$[Mapp]@ %2$[är]@ %3$@";
-"%[Folder]@ %[is not]@ %@" = "%1$[Mapp]@ %2$[är inte]@ %3$@";
-"%[HasEnclosure]@ is %[No]@" = "%1$[Har bilaga]@ %2$[Nej]@";
-"%[HasEnclosure]@ is %[Yes]@" = "%1$[Har bilaga]@ %2$[Ja]@";
-"%[Read]@ is %[No]@" = "%1$[Är läst]@ %2$[Nej]@";
-"%[Read]@ is %[Yes]@" = "%1$[Är läst]@ %2$[Ja]@";
-"%[Subject]@ %[contains]@ %@" = "%1$[Ämne]@ %2$[innehåller]@ %3$@";
-"%[Subject]@ %[does not contain]@ %@" = "%1$[Ämne]@ %2$[innehåller inte]@ %3$@";
-"%[Subject]@ %[is]@ %@" = "%1$[Ämne]@ %2$[är]@ %3$@";
-"%[Subject]@ %[is not]@ %@" = "%1$[Ämne]@ %2$[är inte]@ %3$@";
-"%[Text]@ %[contains]@ %@" = "%1$[Innehåll]@ %2$[innehåller]@ %3$@";
-"%[Text]@ %[does not contain]@ %@" = "%1$[Innehåll]@ %2$[innehåller inte]@ %3$@";
-"%[Text]@ %[is]@ %@" = "%1$[Innehåll]@ %2$[är]@ %3$@";
-"%[Text]@ %[is not]@ %@" = "%1$[Innehåll]@ %2$[är inte]@ %3$@";
+"%[Any,None]@ of the following are true" = "Artikeln matchar %1$[någon,ingen]@ av följande villkor";
+"%[Author,Folder,Subject,Text]@ %[is,is not]@ %@" = "%1$[Författare,Mapp,Ämne,Innehåll]@ %2$[är,är inte]@ %3$@";
+"%[Author,Subject,Text]@ %[contains,does not contain]@ %@" = "%1$[Författare,Ämne,Innehåll]@ %2$[innehåller,innehåller inte]@ %3$@";
+"%[Date]@ %[is,is greater than or equal to,is less than,is less than or equal to]@ %[yesterday]@" = "%1$[Datum]@ %2$[är,är efter eller,är före,är före eller]@ %3$[igår]@";
+"%[Date]@ %[is,is greater than,is greater than or equal to,is less than,is less than or equal to]@ %[last week]@" = "%1$[Datum]@ %2$[är,är efter,är efter eller,är före,är före eller]@ %3$[förra veckan]@";
+"%[Date]@ %[is,is less than,is less than or equal to]@ %[today]@" = "%1$[Datum]@ %2$[är,är före,är före eller]@ %3$[idag]@";
+"%[Date]@ %[less than ago,more than ago]@ %[days,hours,minutes,months,weeks,years]@ %@" = "%1$[Datum]@ %2$[är de senaste,är inte de senaste]@ %4$@ %3$[dagarna,timmarna,minuterna,månaderna,veckorna,åren]@";
+"%[Deleted,Flagged,HasEnclosure,Read]@ is %[No,Yes]@" = "%1$[Är raderad,Är flaggad,Har bilaga,Är läst]@ %2$[Nej,Ja]@";
